<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/edit_book_toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <include layout="@layout/edit_book_bookinfo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp">

                <TextView
                    android:id="@+id/book_edit_detail_bar_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/book_info_source"
                    style="?android:listSeparatorTextViewStyle" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/book_edit_readingstatus_image_view"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="0dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/readstatus" />

                    <EditText
                        android:id="@+id/reading_status_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:hint="@string/book_tag"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_toEndOf="@+id/book_edit_readingstatus_image_view"
                        android:layout_toRightOf="@+id/book_edit_readingstatus_image_view"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/book_edit_bookshelf_image_view"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="0dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/bookshelf" />


                    <EditText
                        android:id="@+id/book_shelf_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:hint="@string/book_bookshelf"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_toEndOf="@id/book_edit_bookshelf_image_view"
                        android:layout_toRightOf="@id/book_edit_bookshelf_image_view"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="4dp">

                    <ImageView
                        android:id="@+id/book_edit_note_image_view"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="0dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/note" />

                    <EditText
                        android:id="@+id/book_notes_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:hint="@string/book_note"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_toEndOf="@id/book_edit_note_image_view"
                        android:layout_toRightOf="@id/book_edit_note_image_view"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="4dp">

                    <ImageView
                        android:id="@+id/book_edit_label_image_view"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="0dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/tag" />

                    <EditText
                        android:id="@+id/book_labels_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:hint="@string/book_tag"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_toEndOf="@id/book_edit_label_image_view"
                        android:layout_toRightOf="@id/book_edit_label_image_view"
                        android:focusable="false" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="4dp">

                    <ImageView
                        android:id="@+id/book_edit_website_image_view"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="0dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/url" />

                    <EditText
                        android:id="@+id/book_website_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:textSize="16sp"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:hint="@string/book_url"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_toEndOf="@id/book_edit_website_image_view"
                        android:layout_toRightOf="@id/book_edit_website_image_view"/>

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>